@@ -5,6 +5,7 @@ sunuo (0.1.9) unstable; urgency=low
   * write etc/sunuo.xml only if it did not exist
   * fixed NullReferenceException in overlay error handler
   * home page changed to http://www.sunuo.org/
+  * the mailing list is now hosted on BerliOS
 
  --
 
